--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,17 @@
-<router-outlet />
+<div class="container">
+  <div class="sidebar">
+    <div class="user-info">
+      <img src="https://i.pinimg.com/236x/d7/74/ec/d774ecff8fecc6100e9043db67f36997.jpg" alt="User Avatar">
+      <p>Emily Smith</p>
+    </div>
+    <ul>
+      <li routerLinkActive="active"><a routerLink="/account">Compte</a></li>
+      <li routerLinkActive="active"><a routerLink="/portfolio">Portfolio</a></li>
+      <li routerLinkActive="active"><a routerLink="/objects">Mes objets</a></li>
+      <li routerLinkActive="active"><a routerLink="/exit">Exit</a></li>
+    </ul>
+  </div>
+  <div class="content">
+    <router-outlet></router-outlet>
+  </div>
+</div>
