--- a/src/app/components/main-page/main-page.component.html
+++ b/src/app/components/main-page/main-page.component.html
@@ -1,1 +1,41 @@
-<p>main-page works!</p>
+<!-- <div class="card flex justify-content-center">
+  <p-card header="Advanced Card" subheader="Card Subheader" [style]="{ width: '360px' }">
+      <ng-template pTemplate="header">
+          <img alt="Card" src="https://primefaces.org/cdn/primeng/images/card-ng.jpg" />
+      </ng-template>
+      <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore sed consequuntur error repudiandae numquam deserunt quisquam repellat libero asperiores earum nam nobis, culpa ratione quam perferendis esse, cupiditate neque
+          quas!
+      </p>
+      <ng-template pTemplate="footer">
+          <div class="flex gap-3 mt-1">
+              <p-button label="Cancel" severity="secondary" class="w-full" styleClass="w-full" />
+              <p-button label="Save" class="w-full" styleClass="w-full" />
+          </div>
+      </ng-template>
+  </p-card>
+</div> -->
+
+<div class="account">
+  <h1>Compte</h1>
+  <form>
+    <div class="form-group">
+      <label for="nom">Nom:</label>
+      <input type="text" id="nom" name="nom" value="Smith" readonly>
+    </div>
+    <div class="form-group">
+      <label for="prenom">Prénom:</label>
+      <input type="text" id="prenom" name="prenom" value="Emily" readonly>
+    </div>
+    <div class="form-group">
+      <label for="email">Email:</label>
+      <input type="email" id="email" name="email" value="emily.shith@gmail.com" readonly>
+    </div>
+    <div class="form-group">
+      <label for="password">Mot de passe:</label>
+      <input type="password" id="password" name="password" value="********" readonly>
+    </div>
+    <button type="submit">Mettre à jour</button>
+  </form>
+</div>
+
