--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,10 +5,18 @@
       <p>Emily Smith</p>
     </div>
     <ul>
-      <li routerLinkActive="active"><a routerLink="/account">Compte</a></li>
-      <li routerLinkActive="active"><a routerLink="/portfolio">Portfolio</a></li>
-      <li routerLinkActive="active"><a routerLink="/objects">Mes objets</a></li>
-      <li routerLinkActive="active"><a routerLink="/exit">Exit</a></li>
+      <li routerLinkActive="active"><a routerLink="/account"> 
+        <img src="">Compte <span>></span> </a>
+      </li>
+      <li routerLinkActive="active"><a routerLink="/portfolio"> 
+        <img src="">Portfolio <span>></span></a>
+      </li>
+      <li routerLinkActive="active">
+        <a routerLink="/objects"> <img src="">Mes objets <span>></span></a>
+      </li>
+      <li routerLinkActive="active">
+        <a routerLink="/exit"> <img src="">Exit <span>></span></a>
+      </li>
     </ul>
   </div>
   <div class="content">
