--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -6,19 +6,34 @@
 
 .sidebar {
   width: 250px;
-  background-color: #f0f0f0;
+  height: 400px;
+  background-color: white;
   padding: 20px;
-  border-right: 1px solid #ddd;
+  border-radius: 12px;
+  border: 1px solid #ddd; 
 
   .user-info {
     text-align: center;
+    background-color: blue;
+    border-radius: 12px;  
+    height: 200px;
     margin-bottom: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-left: 20px;
 
     img {
       width: 50px;
       height: 50px;
       border-radius: 50%;
       margin-bottom: 10px;
+    }
+
+    p {
+      width: 100px;
+      color: white;
+      font-weight: bold;
     }
   }
 
@@ -30,11 +45,14 @@
 
   li {
     margin-bottom: 10px;
+    border-bottom: solid 1px;
   }
 
   a {
     text-decoration: none;
-    color: #337ab7;
+    color: #000000;
+    display: flex;
+    justify-content: space-between;
 
     &:hover {
       color: #23527c;
