--- a/src/app/components/main-page/main-page.component.html
+++ b/src/app/components/main-page/main-page.component.html
@@ -1,21 +1,3 @@
-<!-- <div class="card flex justify-content-center">
-  <p-card header="Advanced Card" subheader="Card Subheader" [style]="{ width: '360px' }">
-      <ng-template pTemplate="header">
-          <img alt="Card" src="https://primefaces.org/cdn/primeng/images/card-ng.jpg" />
-      </ng-template>
-      <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore sed consequuntur error repudiandae numquam deserunt quisquam repellat libero asperiores earum nam nobis, culpa ratione quam perferendis esse, cupiditate neque
-          quas!
-      </p>
-      <ng-template pTemplate="footer">
-          <div class="flex gap-3 mt-1">
-              <p-button label="Cancel" severity="secondary" class="w-full" styleClass="w-full" />
-              <p-button label="Save" class="w-full" styleClass="w-full" />
-          </div>
-      </ng-template>
-  </p-card>
-</div> -->
-
 <div class="account">
   <form>
     <h1>Compte</h1>
@@ -35,7 +17,9 @@
       <label for="password">Mot de passe:</label>
       <input type="password" id="password" name="password" value="********" readonly>
     </div>
-    <button type="submit">Mettre à jour</button>
+    <div class="submit-container">
+      <button type="submit">Mettre à jour</button>
+    </div>
   </form>
 </div>
 
