--- a/src/app/components/main-page/main-page.component.scss
+++ b/src/app/components/main-page/main-page.component.scss
@@ -3,6 +3,7 @@
 
   h1 {
     margin-top: 0;
+    text-align: center;
   }
 
   form {
@@ -30,16 +31,21 @@
     border-radius: 5px;
   }
 
-  button[type="submit"] {
-    background-color: #337ab7;
-    color: #fff;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
+  .submit-container{
+  display: flex;
+  justify-content: center;
 
-    &:hover {
-      background-color: #23527c;
+    button[type="submit"] {
+      background-color: #337ab7;
+      color: #fff;
+      padding: 10px 20px;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+  
+      &:hover {
+        background-color: #23527c;
+      }
     }
   }
 }
