--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,25 +1,31 @@
 <div class="container">
-  <div class="sidebar">
-    <div class="user-info">
-      <img src="https://i.pinimg.com/236x/d7/74/ec/d774ecff8fecc6100e9043db67f36997.jpg" alt="User Avatar">
-      <p>Emily Smith</p>
+  <header>
+    
+  </header>
+  <section>
+    <div class="sidebar">
+      <div class="user-info">
+        <img src="https://i.pinimg.com/236x/d7/74/ec/d774ecff8fecc6100e9043db67f36997.jpg" alt="User Avatar">
+        <p>Emily Smith</p>
+      </div>
+      <ul>
+        <li routerLinkActive="active"><a routerLink="/account"> 
+          <img src="">Compte <span>></span> </a>
+        </li>
+        <li routerLinkActive="active"><a routerLink="/portfolio"> 
+          <img src="">Portfolio <span>></span></a>
+        </li>
+        <li routerLinkActive="active">
+          <a routerLink="/objects"> <img src="">Mes objets <span>></span></a>
+        </li>
+        <li routerLinkActive="active">
+          <a routerLink="/exit"> <img src="">Exit <span>></span></a>
+        </li>
+      </ul>
     </div>
-    <ul>
-      <li routerLinkActive="active"><a routerLink="/account"> 
-        <img src="">Compte <span>></span> </a>
-      </li>
-      <li routerLinkActive="active"><a routerLink="/portfolio"> 
-        <img src="">Portfolio <span>></span></a>
-      </li>
-      <li routerLinkActive="active">
-        <a routerLink="/objects"> <img src="">Mes objets <span>></span></a>
-      </li>
-      <li routerLinkActive="active">
-        <a routerLink="/exit"> <img src="">Exit <span>></span></a>
-      </li>
-    </ul>
-  </div>
-  <div class="content">
-    <router-outlet></router-outlet>
-  </div>
+    <div class="content">
+      <router-outlet></router-outlet>
+    </div>
+    <div class="spacer"></div>
+  </section>
 </div>
