--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,72 +1,83 @@
-.container {
-  display: flex;
-  flex-direction: row;
-  height: 100vh;
+header{
+  width: 100%;
+  height: 10vh;
+  background-color: blue;
 }
 
-.sidebar {
-  width: 250px;
-  height: 400px;
-  background-color: white;
-  padding: 20px;
-  border-radius: 12px;
-  border: 1px solid #ddd; 
-
-  .user-info {
-    text-align: center;
-    background-color: blue;
-    border-radius: 12px;  
-    height: 200px;
-    margin-bottom: 20px;
-    display: flex;
+section{  
+  display: flex;
+  justify-content: space-around;
+  height: 90vh;
+  padding-top: 50px;
+  
+  .sidebar {
+    width:250px;
+    height: 300px;
+    background-color: white;  
+    border-radius: 12px;
+    border: 1px solid #ddd; 
+    display: flex ;
     flex-direction: column;
     justify-content: center;
-    padding-left: 20px;
-
-    img {
-      width: 50px;
-      height: 50px;
-      border-radius: 50%;
-      margin-bottom: 10px;
+  
+    .user-info {
+      text-align: center;
+      background-color: blue;
+      border-radius: 12px;  
+      height: 200px;
+      margin-bottom: 20px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      padding-left: 20px;
+  
+      img {
+        width: 50px;
+        height: 50px;
+        border-radius: 50%;
+        margin-bottom: 10px;
+      }
+  
+      p {
+        width: 100px;
+        color: white;
+        font-weight: bold;
+      }
     }
-
-    p {
-      width: 100px;
-      color: white;
+  
+    ul {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+    }
+  
+    li {
+      margin-bottom: 10px;
+      border-bottom: solid 1px;
+    }
+  
+    a {
+      text-decoration: none;
+      color: #000000;
+      display: flex;
+      justify-content: space-between;
+  
+      &:hover {
+        color: #23527c;
+      }
+    }
+  
+    .active {
       font-weight: bold;
     }
   }
 
-  ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-  }
-
-  li {
-    margin-bottom: 10px;
-    border-bottom: solid 1px;
-  }
-
-  a {
-    text-decoration: none;
-    color: #000000;
+  .container{
     display: flex;
-    justify-content: space-between;
-
-    &:hover {
-      color: #23527c;
-    }
+    justify-content: center;
   }
 
-  .active {
-    font-weight: bold;
+  .spacer{
+    width: 250px;
   }
 }
-
-.content {
-  flex: 1;
-  padding: 20px;
-}
-
-
