--- a/src/app/components/main-page/main-page.component.html
+++ b/src/app/components/main-page/main-page.component.html
@@ -1,5 +1,5 @@
-<div class="account">
-  <form>
+
+  <form class="account">
     <h1>Compte</h1>
     <div class="form-group">
       <label for="nom">Nom:</label>
@@ -21,5 +21,5 @@
       <button type="submit">Mettre à jour</button>
     </div>
   </form>
-</div>
+
 
