--- a/src/app/components/main-page/main-page.component.scss
+++ b/src/app/components/main-page/main-page.component.scss
@@ -1,18 +1,18 @@
-.account {
-  padding: 20px;
-
-  h1 {
-    margin-top: 0;
-    text-align: center;
-  }
 
   form {
-    max-width: 500px;
+    width: 500px;
     margin: 0 auto;
     padding: 20px;
     border: 1px solid #ddd;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    display: flex;  
+    flex-direction: column;
+  }
+
+  h1 {  
+    margin-top: 0;  
+    text-align: center;
   }
 
   .form-group {
@@ -48,4 +48,3 @@
       }
     }
   }
-}
