--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,7 +1,16 @@
+
 header{
   width: 100%;
   height: 10vh;
   background-color: blue;
+  color: white;
+  display: flex;
+  align-items: center;
+
+  h1{
+    padding-left: 20px;
+  }
+
 }
 
 section{  
@@ -12,7 +21,7 @@ section{
   
   .sidebar {
     width:250px;
-    height: 300px;
+    height: 400px;
     background-color: white;  
     border-radius: 12px;
     border: 1px solid #ddd; 
@@ -54,6 +63,7 @@ section{
     li {
       margin-bottom: 10px;
       border-bottom: solid 1px;
+      height: 40px;
     }
   
     a {
@@ -80,4 +90,16 @@ section{
   .spacer{
     width: 250px;
   }
+}
+
+@media (max-width: 1024px) {
+  .spacer {
+    display: none !important;
+  }
+}
+@media (max-width: 800px) {
+
+  .sidebar {
+    display: none !important;
+}
 }
