--- a/src/app/components/main-page/main-page.component.scss
+++ b/src/app/components/main-page/main-page.component.scss
@@ -1,7 +1,8 @@
 
+  
+  
   form {
     width: 500px;
-    margin: 0 auto;
     padding: 20px;
     border: 1px solid #ddd;
     border-radius: 10px;
@@ -48,3 +49,10 @@
       }
     }
   }
+
+  @media (max-width: 800px) {
+
+    form {
+      width: 375px;
+  }
+}
