--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,9 @@
 <div class="container">
   <header>
-    <h1>Findr</h1>
+    <h1>FindR</h1>
+    <nav>
+
+    </nav>
   </header>
   <section>
     <div class="sidebar">
@@ -10,16 +13,16 @@
       </div>
       <ul>
         <li routerLinkActive="active"><a routerLink="/account"> 
-          <img src="">Compte <span>></span> </a>
+          <img src="">Compte <span class="chevron-sidebar">></span> </a>
         </li>
         <li routerLinkActive="active"><a routerLink="/portfolio"> 
-          <img src="">Portfolio <span>></span></a>
+          <img src="">Portfolio <span class="chevron-sidebar">></span></a>
         </li>
         <li routerLinkActive="active">
-          <a routerLink="/objects"> <img src="">Mes objets <span>></span></a>
+          <a routerLink="/objects"> <img src="">Mes objets <span class="chevron-sidebar">></span></a>
         </li>
         <li routerLinkActive="active">
-          <a routerLink="/exit"> <img src="">Exit <span>></span></a>
+          <a routerLink="/exit"> <img src="">Exit <span class="chevron-sidebar">></span></a>
         </li>
       </ul>
     </div>
