--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,7 +2,7 @@
 header{
   width: 100%;
   height: 10vh;
-  background-color: blue;
+  background-color: #232F72;
   color: white;
   display: flex;
   align-items: center;
@@ -31,7 +31,7 @@ section{
   
     .user-info {
       text-align: center;
-      background-color: blue;
+      background-color: #232F72;
       border-radius: 12px;  
       height: 200px;
       margin-bottom: 20px;
@@ -71,9 +71,14 @@ section{
       color: #000000;
       display: flex;
       justify-content: space-between;
+      font-weight: bold;
   
       &:hover {
         color: #23527c;
+      }
+
+      .chevron-sidebar{
+        padding-right: 25px;
       }
     }
   
