--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,4 +1,3 @@
-
 header{
   width: 100%;
   height: 10vh;
@@ -6,6 +5,7 @@ header{
   color: white;
   display: flex;
   align-items: center;
+  box-shadow: 0px 0px 7px #888888;
 
   h1{
     padding-left: 20px;
@@ -13,98 +13,26 @@ header{
 
 }
 
-section{  
+main{  
   display: flex;
-  justify-content: space-around;
   height: 90vh;
   padding-top: 50px;
-  
-  .sidebar {
-    width:250px;
-    height: 400px;
-    background-color: white;  
-    border-radius: 12px;
-    border: 1px solid #ddd; 
-    display: flex ;
-    flex-direction: column;
-    justify-content: center;
-  
-    .user-info {
-      text-align: center;
-      background-color: #232F72;
-      border-radius: 12px;  
-      height: 200px;
-      margin-bottom: 20px;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      padding-left: 20px;
-  
-      img {
-        width: 50px;
-        height: 50px;
-        border-radius: 50%;
-        margin-bottom: 10px;
-      }
-  
-      p {
-        width: 100px;
-        color: white;
-        font-weight: bold;
-      }
-    }
-  
-    ul {
-      list-style: none;
-      padding: 0;
-      margin: 0;
-    }
-  
-    li {
-      margin-bottom: 10px;
-      border-bottom: solid 1px;
-      height: 40px;
-    }
-  
-    a {
-      text-decoration: none;
-      color: #000000;
-      display: flex;
-      justify-content: space-between;
-      font-weight: bold;
-  
-      &:hover {
-        color: #23527c;
-      }
 
-      .chevron-sidebar{
-        padding-right: 25px;
-      }
-    }
-  
-    .active {
-      font-weight: bold;
-    }
+  nav {
+    padding-left: 20px;
+    position: absolute;
   }
 
-  .container{
+  section {
     display: flex;
+    align-items: center;
     justify-content: center;
-  }
-
-  .spacer{
-    width: 250px;
+    width: 100%;
   }
 }
 
 @media (max-width: 1024px) {
-  .spacer {
-    display: none !important;
-  }
-}
-@media (max-width: 800px) {
-
-  .sidebar {
+  nav {
     display: none !important;
 }
 }
