--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,8 +7,9 @@
       <app-side-bar></app-side-bar>
     </nav>
     <section>
-      <app-compte></app-compte>
-    <!-- <router-outlet></router-outlet> -->
+    <!-- <app-compte></app-compte> -->
+     <!-- <app-main-page></app-main-page>-->
+    <router-outlet></router-outlet>
     </section>
   </main>
 </div>
