--- a/src/app/components/main-page/main-page.component.html
+++ b/src/app/components/main-page/main-page.component.html
@@ -1,11 +1,32 @@
 <form class="account">
     <h1>Mes objets</h1>
     <div class="contenu">
-        <div class="recherche"></div>
+        <div class="recherche">
+            <label>Rechercher</label>
+            <input type="text" placeholder="Rechercher un objet" >
+        </div>
         <ol class="liste-objets">
-            <h2>Description</h2>
-            <li>element 1</li>
-            <li>element 2</li>
+            <div class="description">
+                <span>Nom</span>
+                <span>QR-code</span>
+                <span>Statut</span>
+                <span>chat</span>
+            </div>
+            <li>
+                <span>Téléphone</span>
+                <span>QR-code</span>
+                <span class="statut statut-perdu">PERDU</span>
+                <button class="bouton-perdu">Ouvrir le chat</button>
+            </li>
+            <li>
+                <span>Ordinateur</span>
+                <span>QR-code</span>
+                <span class="statut">OK</span>
+                <button>Ouvrir le chat</button>
+            </li>
+            <div class="ajout">
+                <button class="bouton-ajout">+</button>
+            </div>
         </ol>
     </div>
   </form>
