--- a/src/app/components/side-bar/side-bar.component.scss
+++ b/src/app/components/side-bar/side-bar.component.scss
@@ -40,7 +40,7 @@
     li {
       margin-bottom: 10px;
       border-bottom: 0px solid;
-      box-shadow: 0px 1.25px 1px #888888;
+      border-bottom: 1px solid #88888884;
       height: 40px;
     }
   
