mis en forme composant chat

--- a/src/app/components/chat/chat.component.html
+++ b/src/app/components/chat/chat.component.html
@@ -1,1 +1,26 @@
-<p>chat works!</p>
+<form>
+    <ul class="liste-message">
+        <li class="message">
+            <div class="message-header">
+                <span class="date">10/07/2024</span>
+                <span class="pseudo">Propriétaire</span>
+            </div>
+            <div class="contenu">
+                Blabalbal
+            </div>
+        </li>
+        <li class="message">
+            <div class="message-header">
+                <span class="date">10/07/2024</span>
+                <span class="pseudo">Trouveur</span>
+            </div>
+            <div class="contenu">
+                Blabalbal
+            </div>
+        </li>
+    </ul>
+    <div class="zone-entree">
+        <input type="text">
+        <button>Envoyer</button>
+    </div>
+</form>
