finalisation chat + fix qr code

--- a/src/app/components/compte/compte.component.scss
+++ b/src/app/components/compte/compte.component.scss
@@ -46,7 +46,7 @@ form {
     
       
           &:hover {
-            background-color: #0E64D2;
+            background-color: #0e64d2;
           }
         }
       }
