--- a/src/app/components/main-page/main-page.component.html
+++ b/src/app/components/main-page/main-page.component.html
@@ -14,13 +14,13 @@
             </div>
             <li>
                 <span>Téléphone</span>
-                <span>QR-code</span>
+                <img src="/qr.png" alt="">
                 <span class="statut statut-perdu">PERDU</span>
                 <button class="bouton-perdu">Ouvrir le chat</button>
             </li>
             <li>
                 <span>Ordinateur</span>
-                <span>QR-code</span>
+                <img src="/qr.png" alt="">
                 <span class="statut">OK</span>
                 <button>Ouvrir le chat</button>
             </li>
