--- a/src/app/components/chatbis/chatbis.component.html
+++ b/src/app/components/chatbis/chatbis.component.html
@@ -2,25 +2,25 @@
     <ul class="liste-message">
         <li class="message">
             <div class="message-header">
+                <span class="pseudo">Trouveur</span>
                 <span class="date">10/07/2024</span>
-                <span class="pseudo">Propriétaire</span>
             </div>
             <div class="contenu">
-                Blabalbal
+                Bonjour j'ai trouvé votre portable.
             </div>
         </li>
         <li class="message">
             <div class="message-header">
                 <span class="date">10/07/2024</span>
-                <span class="pseudo">Trouveur</span>
+                <span class="pseudo">Propriétaire</span>
             </div>
             <div class="contenu">
-                Blabalbal
+                <span>Bonjour merci pouvez vous le déposer au centre de police ?</span>
             </div>
         </li>
     </ul>
     <div class="zone-entree">
         <input type="text">
-        <button>Envoyer</button>
+        <button class="submit">Envoyer</button>
     </div>
 </form>
