--- a/src/app/components/side-bar/side-bar.component.html
+++ b/src/app/components/side-bar/side-bar.component.html
@@ -8,7 +8,7 @@
   </div>
   <ul>
     <li routerLinkActive="active">
-      <a routerLink="['/compte']">
+      <a [routerLink]="['/compte']">
         <img src="" />Compte <span class="chevron-sidebar">></span>
       </a>
     </li>
@@ -18,7 +18,7 @@
       >
     </li>
     <li routerLinkActive="active">
-      <a routerLink="main">
+      <a [routerLink]="['main']">
         <img src="" />Mes objets <span class="chevron-sidebar">></span></a
       >
     </li>
