Refactoring, to prepare generation QR code

--- a/src/app/components/main-page/main-page.component.html
+++ b/src/app/components/main-page/main-page.component.html
@@ -24,6 +24,12 @@
                 <span class="statut">OK</span>
                 <button>Ouvrir le chat</button>
             </li>
+            <li>
+              <span>Téléphone</span>
+              <img src="/qr.png" alt="">
+              <span class="statut statut-perdu">PERDU</span>
+              <button class="bouton-perdu">Ouvrir le chat</button>
+          </li>
             <div class="ajout">
                 <button class="bouton-ajout">+</button>
             </div>
