--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
   </header>
   <main>
     <nav>
-      <app-side-bar></app-side-bar>
+      <app-side-bar *ngIf="this.isActivate()"></app-side-bar>
     </nav>
     <section>
     <!-- <app-compte></app-compte> -->
