--- a/src/app/components/main-page/main-page.component.scss
+++ b/src/app/components/main-page/main-page.component.scss
@@ -1,13 +1,22 @@
 form {
+    position: absolute;
+    top: 20vh;
+    right: calc(50% - 250px);
+    left: calc(50% - 250px);
     width: 700px;
+    @media (max-width: 450px) {
+      width: 100%;
+      right: 0;
+      left: 0;
+    }
     padding: 20px;
     border-radius: 10px;
-    display: flex;  
+    display: flex;
     flex-direction: column;
     box-shadow: 0px 0px 7px #888888;
-    
-    h1 {  
-        margin-top: 0;  
+
+    h1 {
+        margin-top: 0;
         text-align: center;
     }
 
@@ -29,7 +38,7 @@ form {
           font-size: medium;
         }
       }
-      
+
       .liste-objets{
         list-style-type: none;
         padding: 0;
@@ -59,7 +68,7 @@ form {
             width: 10%;
             height: 10%;
             object-fit:cover;
-            
+
           }
 
           span{
@@ -112,7 +121,7 @@ form {
           }
         }
       }
-        
+
     }
 
 
