--- a/src/app/components/main-page/main-page.component.scss
+++ b/src/app/components/main-page/main-page.component.scss
@@ -77,6 +77,7 @@ form {
           }
 
           .statut{
+            cursor: pointer;
             background-color: rgb(0, 209, 0);
             color: white;
             padding: 10px;
